@@ -1,3 +1,8 @@
+2005-05-02  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/gstring.c (g_str_equal, g_str_hash): Move docs
+	inline.
+
 2005-05-01  Matthias Clasen  <mclasen@redhat.com>
 
 	* glib/ghash.h: Rename some parameters to make gtk-doc
